# SimpleSolutions-task

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
test_task/: admin.py  urls.py  views.py
test_task/migrations/: 0001_initial.py
test_task/models/: __init__.py  item_model.py  order_model.py
test_task/serializers/: __init__.py  item_serializer.py  order_serializer.py
test_task/views/: __init__.py  item_views.py  order_views.py
